fix overview whitespace overflow

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -221,4 +221,6 @@ table {
   box-shadow: inset 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12) !important;
 }
 
-
+.node-overview .theme--dark.v-data-table>.v-data-table__wrapper>table>tbody>tr>td {
+  overflow-wrap: anywhere;
+}
